Edited wiki page through web user interface.

--- a/wiki/2009DecemberSpireIntegrationMeeting.wiki
+++ b/wiki/2009DecemberSpireIntegrationMeeting.wiki
@@ -1,9 +1,7 @@
-#summary One-sentence summary of this page.
 
 = Introduction =
 
-Add your content here.
-
+Link on [http://www.herschel.be/twiki/bin/view/Spire/IntegrationMeetingDecember2009 Herschel twiki].
 
 = Details =
 
