Edited wiki page through web user interface.

--- a/wiki/2009DecemberSpireIntegrationMeeting.wiki
+++ b/wiki/2009DecemberSpireIntegrationMeeting.wiki
@@ -6,4 +6,4 @@ The link on [http://www.herschel.be/twiki/bin/view/Spire/IntegrationMeetingDecem
 
 ==2009-12-07 Monday==  
 
-Arnie and Lijun are coming...
+Arnie(The funny American old man) and Lijun are coming...
