--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -7,6 +7,9 @@
 ===== Done =====
   # 4h 100% HCSS-9094 HttpClientPool does not pass methods to remote pool
   # 2h 100% HCSS-9088 HttpClientPool needs getProjectInfo
+  # 1d 50% HCSS-8962 Remove hard coded pool id from the internal references of Context to child products in their own pool
+  # 4h 50% HCSS-8687 Improve query performance
+    Test Lucene 3.0 numberic support. Decrease the percentage of accomplishment for more effort needed to adopt new Lucene features.
 
 ===== Planed =====
 
