Edited wiki page through web user interface.

--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -4,7 +4,17 @@
 == 2010-02-11 16:30 ==
 ==== Bo ====
 ===== Done =====
+  * 90% HCSS-8777: Deprecate ProductPool setReadOnly and isReadOnly
+  * 1h 90% HCSS-8514: Add a method getConfiguration() to ProductPool
+  PACS-2316 resolved, waiting for manual build
+  * 1d 75% HCSS-7404 Implement Java query API
+  Proto version committed  
 ===== Planed =====
+  * HCSS-8687 Improve query performance
+  * HCSS-8963 Reference counting inside a pool
+  Pending for INFR-386: Upgrade of external LUCENE library required	
+  * HCSS-8960 Introduce URN Object to Pal
+  * HCSS-7404 Implement Java query API 
 
 ==== Jingjing ====
 ===== Done =====
