--- a/wiki/HerschelPapers.wiki
+++ b/wiki/HerschelPapers.wiki
@@ -1,13 +1,7 @@
-#summary One-sentence summary of this page.
+Herschel软件开发论文准备
 
-= Introduction =
+[Herschel Common]
 
-Add your content here.
+[PLOT]
 
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+[PAL]
