--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -16,6 +16,10 @@
   * HCSS-10014	Local store save performance and transactions
   * HCSS-10299 Ingest functionality must be updated
 
+==== Jingjing ====
+===== Done =====
+ * HCSS-7312	put properties panel into the preference editor
+
 ----
 == 2010-05-13 15:30 (7:30 GMT) ==
 
