--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -20,6 +20,17 @@
 ===== Done =====
  * HCSS-7312	put properties panel into the preference editor
 
+==== Dongqing ====
+===== Done =====
+ * HCSS-9856	Can't save to HTTP pool
+ * HCSS-10379	Provide a user friendly pool name(http)
+ * 2h 90% HCSS-5609   ObservationSaveStrategy changes metadata	
+
+==== Planed ====
+ * HCSS-5609	ObservationSaveStrategy changes metadata	
+ * HCSS-9722	Add test harness for http client pool	
+ * HCSS-10378	Provide a user friendly pool name(serial pool)
+ * HCSS-8422	ProductStorage should send notification if the product classes have changed
 ----
 == 2010-05-13 15:30 (7:30 GMT) ==
 
