--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -5,6 +5,12 @@
 == 2010-06-10 15:30 (7:30 GMT) ==
 ==== PAL ====
 ===== Done =====
+* 3.5h HCSS-4587	Property substitution in XML config files	
+* 0.5h HCSS-10415	PoolManager.contains(String) is misleading and badly documented or incomplete
+
+===== Planed =====
+ * HCSS-10426	PoolManager and StorageManager should know about PAL preferences	
+ * HCSS-9400	Storing a large parameter description (2MB) in an lstore takes forever
 
 ==== PLOT ====
 ===== Planed =====
