--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -3,6 +3,17 @@
 
 ----
 == 2010-07-23 15:30 (7:30 GMT) ==
+==== PAL ====
+===== Done =====
+* 0.5h HCSS-10844	Update usage of ia_dataset comparison API (ia_pal)
+* 0.5h HCSS-10841	Update usage of ia_dataset comparison API (ia_pal_pool_lstore)
+* %70 20h HCSS-6909	Product sink is not thread safe
+
+==== Planed ====
+ * HCSS-10814 Http pool ignores the setting for HCSS_PROPS environment variable
+ * HCSS-10851 Can not set lstore dir in http pool
+ * HCSS-10860 Test harness coverage of http servlet methods
+
 ==== PLOT ====
 ===== Done =====
  * 3h HCSS-5140	DPAT0: Stop performing actions in a plot after closing it
@@ -11,6 +22,7 @@
  * 3h HCSS-10580	need the equivalent of IDL POLYFILL
 ===== Planed =====
  * HCSS-10580	need the equivalent of IDL POLYFILL
+
 
 ----
 == 2010-07-15 15:30 (7:30 GMT) ==
