--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -9,7 +9,10 @@
 
 ==== PLOT ====
 ===== Done =====
+ * 20h HCSS-10580	need the equivalent of IDL POLYFILL
 ===== Planed =====
+ * HCSS-10873	Log axis negative power thick label does not look good
+* HCSS-10879	The arrow symbols in plot should be aligned at the tail not at the head
 
 
 ----
