--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -4,9 +4,12 @@
 == 2010-08-05 15:30 (7:30 GMT) ==
 ==== PAL ====
 ===== Done =====
- * 
+ * 0.5h HCSS-10841	Update usage of ia_dataset comparison API
+ * 4h 80% HCSS-7750	BasicLock uses unreliable mechanism
 ==== Planed ====
- * 
+ * HCSS-7750	BasicLock uses unreliable mechanism
+ * HCSS-6909	Product sink is not thread safe
+ * HCSS-10670	Exception when trying to save a pool
 ==== PLOT ====
 ===== Done =====
  * 10h 80% HCSS-10873	Log axis negative power thick label does not look good
